Home computer image responsive alignment fix.

--- a/firecares/firestation/static/firestation/theme/assets/less/style.less
+++ b/firecares/firestation/static/firestation/theme/assets/less/style.less
@@ -4353,3 +4353,45 @@ header{
   -ms-user-select: none;
   user-select: none;
 }
+
+// Pull
+
+@media (max-width: @screen-xs-max) {
+  .pull-left-xs {
+    float: left;
+  }
+
+  .pull-right-xs {
+    float: right;
+  }
+}
+
+@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+  .pull-left-sm {
+    float: left;
+  }
+
+  .pull-right-sm {
+    float: right;
+  }
+}
+
+@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+  .pull-left-md {
+    float: left;
+  }
+
+  .pull-right-md {
+    float: right;
+  }
+}
+
+@media (min-width: @screen-lg-min) {
+  .pull-left-lg {
+    float: left;
+  }
+
+  .pull-right-lg {
+    float: right;
+  }
+}
